# polymarket

./: .env.example  .gitignore  AGENTS.md  CLOB_client.py  Cargo.toml  polymarket_workspace.code-workspace
.github/workflows/: auth-smoke.yml
docs/: ABC_PHASE_IMPLEMENTATION_TRACKER.md  API.md  AUTONOMOUS_TRADING_RECOMMENDATIONS.md  GUI.md  ROADMAP.md  TICKETS.md
platform/: .env.example  Cargo.toml
platform/apps/trading-server/: Cargo.toml
platform/apps/trading-server/migrations/: 20260212160000_init_auth_and_ledger.sql  20260212173000_auth_refresh_and_portfolio.sql  20260212191000_password_reset_and_revocation.sql  20260213120000_social_intel_and_orchestrator.sql  20260214110000_instrument_registry_v2.sql  20260214112000_orchestrator_snapshot_history.sql  20260214130000_research_runs.sql
platform/apps/trading-server/src/: intel.rs  main.rs  orchestrator.rs  slicing.rs
platform/apps/trading-ui/: index.html  package-lock.json  package.json  tsconfig.json
platform/apps/trading-ui/src/: App.tsx  api.ts  styles.css  types.ts
platform/apps/trading-ui/src-tauri/: Cargo.toml  tauri.conf.json
platform/apps/trading-ui/src-tauri/capabilities/: default.json
platform/apps/trading-ui/src-tauri/src/: lib.rs  main.rs
platform/apps/trading-ui/src/components/: SparklineChart.tsx
platform/crates/backtest/: Cargo.toml
platform/crates/backtest/src/: lib.rs
platform/crates/domain/: Cargo.toml
platform/crates/domain/src/: lib.rs
platform/crates/oms/: Cargo.toml
platform/crates/oms/src/: audit.rs  lib.rs
platform/crates/portfolio/: Cargo.toml
platform/crates/portfolio/src/: lib.rs
platform/crates/risk/: Cargo.toml
platform/crates/risk/src/: lib.rs
platform/crates/venue_adapters/: Cargo.toml
platform/crates/venue_adapters/src/: config.rs  error.rs  lib.rs  registry.rs  traits.rs  venues.rs
platform/scripts/: ci_auth_smoke.ps1  ci_auth_smoke.sh  smoke_auth.ps1
polymarket-agent/: Cargo.toml
src/: ai_engine.rs  audit.rs  bridge.rs  clob_client.rs  config.rs  error.rs  execution.rs  federated.rs  gamma_api.rs  gui.rs  kalshi_client.rs  main.rs  risk_engine.rs  rl_agent.rs  rl_training.rs  scheduler.rs  scraper_engine.rs  state.rs  strategy.rs  types.rs  utils.rs
