[package]
name = "polymarket-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers-core = "2.0.10"
ethers-providers = { version = "2.0.10", default-features = false, features = ["rustls"] }
ethers-signers = "2.0.10"
ethers-contract = { version = "2.0.10", default-features = false }
dotenv = "0.15"
thiserror = "1.0"
futures = "0.3"
scraper = "0.19"
async-trait = "0.1"
urlencoding = "2.1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
rand = "0.8.5"
iced = { version = "0.12", features = ["advanced"], optional = true }
nalgebra = "0.32"
statrs = "0.16"
plotters = { version = "0.3", optional = true }
plotters-iced = { version = "0.3", optional = true }
plotly = { version = "0.8", optional = true }
oqs = { version = "0.10", optional = true }
libp2p = { version = "0.53", optional = true, default-features = false, features = ["tcp", "dns", "gossipsub", "noise"] }
alloy = { version = "0.7", optional = true }
time = "=0.3.36"
tempfile = "=3.8.1"
getrandom = "=0.2.12"
base64ct = "=1.6.0"

[features]
gui = ["iced"]
gui-charts = ["gui", "plotters", "plotters-iced", "iced/canvas"]
gui-plotly = ["gui", "plotly"]
pq = ["oqs"]
federated = ["libp2p"]
arb = ["alloy"]
