[package]
name = "trading-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
chrono.workspace = true
uuid.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
axum = "0.7.9"
argon2 = "0.5.3"
base64.workspace = true
hmac.workspace = true
sha2.workspace = true
tokio-stream = { version = "0.1.17", features = ["sync"] }
sqlx = { version = "=0.6.3", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
domain = { path = "../../crates/domain" }
venue_adapters = { path = "../../crates/venue_adapters" }
portfolio = { path = "../../crates/portfolio" }
risk = { path = "../../crates/risk" }
oms = { path = "../../crates/oms" }
backtest = { path = "../../crates/backtest" }
