[package]
name = "oms"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }
venue_adapters = { path = "../venue_adapters" }
risk = { path = "../risk" }
portfolio = { path = "../portfolio" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
