[package]
name = "venue_adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
base64ct.workspace = true
chrono.workspace = true
hmac.workspace = true
reqwest.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
