[package]
name = "trading-ui-desktop"
version = "0.1.0"
description = "Atlas Terminal Desktop"
authors = ["Trading Platform Team"]
edition = "2021"

[workspace]

[lib]
name = "trading_ui_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
